fixed clipping, yay. added mobile margins

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -22,7 +22,8 @@ body {
 }
 
 #header-image-container {
-    margin: 20px 0px 0px 0px;
+    margin: 20px 0px 20px 0px;
+    overflow: visible;
 }
 
 #header-image-container image {
@@ -32,12 +33,15 @@ body {
     margin: 0px auto 0px auto;
 }
 
-#header-image-container svg {
+#header-svg {
     display: block;
     margin: auto;
     position: relative;
+    overflow: visible;
     top: 0;
     left: 0;
+    width: 25%;
+    height: 25%;
 }
 
 #header-image-container use {
@@ -64,12 +68,10 @@ body {
 .link-container {
     position: relative;
     text-align: center;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 25px auto;
     width: 75%;
     vertical-align: middle;
+    overflow: visible;
 }
 
 .link {
@@ -78,7 +80,7 @@ body {
     padding-bottom: 10px;
 }
 
-.link-svg {
+.link-svg-container {
     pointer-events: none;
     position: absolute;
     top: 0px;
@@ -88,12 +90,13 @@ body {
     z-index: 10;
 }
 
-.link-svg svg {
+.link-svg-container svg {
     width: 100%;
     height: 100%;
+    overflow: visible;
 }
 
-.link-svg use {
+.link-svg-container use {
     vector-effect: non-scaling-stroke;
     fill-opacity: 0;
 }
